[package]
name = "questionnaire_nsi"
version = "0.1.0"
authors = ["Mubelotix <unbeliever.in.time@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.32"
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.32"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'Event',
  'EventTarget',
  'HtmlDivElement',
  'HtmlButtonElement',
  'HtmlLabelElement',
  'HtmlInputElement',
  'HtmlBrElement',
  'Storage'
]
